[gd_scene load_steps=4 format=3 uid="uid://d1xrh6063iwnk"]

[ext_resource type="Texture2D" uid="uid://ckvgbmcn3hjsf" path="res://minigames/explotar_globo/balloon.png" id="1_482h7"]
[ext_resource type="Script" path="res://minigames/explotar_globo/main.gd" id="1_jkgmu"]
[ext_resource type="Texture2D" uid="uid://ui6a3rxwgutt" path="res://minigames/explotar_globo/background.jpg" id="1_purib"]

[node name="Main" type="Node2D"]
script = ExtResource("1_jkgmu")
clicks_needed = null
game_brief = null
needs_timer = null
timer_seconds = null

[node name="fondo" type="Sprite2D" parent="."]
position = Vector2(369, 553)
scale = Vector2(0.304846, 0.336816)
texture = ExtResource("1_purib")

[node name="globo" type="Sprite2D" parent="."]
position = Vector2(360, 617.5)
scale = Vector2(0.1, 0.097)
texture = ExtResource("1_482h7")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_top = 2.0
offset_right = 714.0
offset_bottom = 1277.0

[node name="WhiteLightTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="PiecesContainer" type="Node" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="WhiteLightTimer" to="." method="_on_white_light_timer_timeout"]
